--- a/ECS.Desktop.WindowsApplication/App.xaml
+++ b/ECS.Desktop.WindowsApplication/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ElectricalControlSystem.Desktop.WindowsApplication.App"
+﻿<Application x:Class="ECS.Desktop.WindowsApplication.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ElectricalControlSystem.Desktop.WindowsApplication"
+             xmlns:local="clr-namespace:ECS.Desktop.WindowsApplication"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
